# vanadiel-console-rpg

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: test.yml
docs/: CONTENT_SCHEMA.md  REVISION_LOG.md
src/vanadiel_console/: __init__.py  app.py  db.py  models.py  systems.py  ui.py
src/vanadiel_console/data/: __init__.py  core_content.json
tests/: test_core.py
web/: README.md  core_content.json  index.html
web/assets/sounds/: README.md
web/src/: engine.js  styles.css
web/src/engine/: assets.js  constants.js  content.js  state.js  utils.js
