[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vanadiel-console-rpg"
version = "0.1.0"
description = "Single-player console RPG prototype inspired by classic FFXI systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
vanadiel = "vanadiel_console.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
